Makefile om het latex compilatie proces te vereenvoudigen

--- a/masterproef.tex
+++ b/masterproef.tex
@@ -31,6 +31,9 @@
 %%%%%%%%%%%%%%%%%%%%
 % Chapters
 
+\include{ch1-case-koopatroopas}
+\include{ch2-case-redblacktrees}
+
 % Chapters
 %%%%%%%%%%%%%%%%%%%%
 \include{besluit}
