--- a/inleiding.tex
+++ b/inleiding.tex
@@ -57,6 +57,76 @@ gegarandeerd worden. Schendingen van de eigenschappen die we gecodeerd hebben
 in de types zijn dus schendingen van de type safety en het typesysteem laat
 zulke programma's niet toe.
 
+De eigenschappen die we opnemen in de types gaan van heel eenvoudig,
+bijvoorbeeld de lengte van een lijst, tot eerder ingewikkeld, bijvoorbeeld
+invarianten van zoekbomen. Fundamenteel is er geen limiet, wat in logica uit te
+drukken is, is ook in de types uit te drukken. Echter als we ons bezig houden
+met programmeren eerder dan bewijzen formaliseren zijn de eigenschappen die we
+wensen af te dwingen vaak eerder eenvoudig. We gebruiken de types eerder om
+eigenschappen die we in talen zonder dependent types impliciet laten en dus in
+het achterhoofd moeten houden, expliciet te maken en zo door het typesysteem
+laten nakijken.
 
-agda
-vec relalg
+De typentheorie waarop Agda gebaseerd is, gelijkt op de intuïtionistische
+typentheorie van Per Martin-Löf \ref{martinlof}. In deze thesis laten we dit
+terzijde en bekijken we Agda als een programmeertaal met dependent types in
+tegenstelling to Haskell, wat als voorbeeld dient voor een programmeertaal die
+in de praktijk toegepast wordt voor grootschalige systemen. Deze veralgemening
+schiet natuurlijk tekort, Agda is geen perfecte voorstelling van \emph{alle}
+programmeertalen met dependent types en Haskell is niet de enige
+programmeertaal die die op industriële schaal gebruikt kan worden met een sterk
+typesysteem.
+
+Het volgende voorbeeld wordt vaak gebruikt om het concept van dependent types
+te illustreren. Deze code komt uit de Agda Standard Library \ref{agda:stdlib}
+maar is licht aangepast om het voorbeeld eenvoudiger te maken.
+
+%----------------------------------------%
+\begin{minted}[fontsize=\small]{agda}
+  data Vec (A : Set) : ℕ → Set where
+    []  : Vec A zero
+    _∷_ : ∀ {n} (x : A) (xs : Vec A n) → Vec A (suc n)
+
+  head : ∀ {n} {A : Set} → Vec A (suc n) → A
+  head (x ∷ xs) = x
+\end{minted}
+
+TODO Deze code is waarschijnlijk nog te cryptisch voor iemand die nog nooit
+Agda heeft gezien, ofwel moet het meer gedetailleerd uitgelegd worden hier
+ofwel moet het voorbeeld pas in een later hoofdstuk behandeld worden.
+\iagda{Vec} is het type voor lijsten met een vaste lengte. De lege lijst,
+\iagda{[]}, heeft lengte nul, het type is \iagda{Vec A zero}: het is dus een
+\iagda{Vec} van elementen van type \iagda{A} met lengte \iagda{zero}. De
+constructor die langere lijsten maakt, verwacht een element, \iagda{x} van type
+\iagda{A}, een lijst met elementen van hetzelfde type \iagda{A} van een
+bepaalde lengte \iagda{n}, \iagda{xs} met als type \iagda{Vec A n}, en geeft
+een lijst terug waarvan de lengte één groter is. De \iagda{head} functie, die
+het eerste element van een lijst terug geeft kan dan eisen dat ze enkel werkt
+op lijsten met een lengte groter dan nul, lijsten met type
+\iagda{Vec A (suc n)}. Als de lengte niet in het type opgenomen is, kan een
+functie er ook geen voorwaarden aan opleggen. Zo moet de \ihask{head} functie
+voor gewone lijsten uit Haskell een fout opwerpen wanneer ze opgeroepen wordt
+met een lege lijst als argument. Dit is een heel eenvoudig voorbeeld en hieruit
+blijkt niet welke van de twee een betere manier is om lijsten voor te stellen.
+Het laat wel zien wat het betekent voor een type om af te hangen van een waarde.
+
+Een tweede voorbeeld uit een paper die het nut van dependent types goed uitlegt
+\ref{TPoP}, laat zien dat dependent types zeer expressief zijn. In Haskell is
+het bijvoorbeeld onmogelijk een veilige en volledige interface te voorzien naar
+een relationele database die niet steunt op preprocessing of experimentele
+features.
+
+%----------------------------------------%
+\begin{minted}[fontsize=\small]{agda}
+  data RA : Schema → Set where
+    Read    : ∀ {s} → Handle s → RA s
+    Union   : ∀ {s} → RA s → RA s → RA s
+    Diff    : ∀ {s} → RA s → RA s → RA s
+    Product : ∀ {s s'} → {_ : So (disjoint s s')} → RA s → RA s'
+              → RA (append s s')
+    Project : ∀ {s} → (s' : Schema) → {_ : So (sub s' s)}
+              → RA s → RA s'
+    Select  : ∀ {s} → Expr s BOOL → RA s → RA s
+\end{minted}
+
+TODO: uitleg bij dit voorbeeld.
