--- a/masterproef.tex
+++ b/masterproef.tex
@@ -7,7 +7,7 @@
 % De volgende \setup mag verwijderd worden als geen fiche gewenst is.
 \setup{filingcard,
   translatedtitle={TODO: Programming and Proofs in Dependently Typed Languages},
-  udc=TODO,
+  udc=681.3,
   shortabstract={TODO}}
 
 % TODO: toggle voor gedrukte versie?
@@ -16,6 +16,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage[outputdir=_build]{minted}
+\usepackage{underscore}
 
 % Missing unicode characters for Agda
 \usepackage{MnSymbol}
