Dominique en Jesper zijn geen ir., bij Dominique geen prof.

--- a/masterproef.tex
+++ b/masterproef.tex
@@ -3,7 +3,7 @@
   author={Toon Nolten},
   promotor={Prof.\,dr.\,ir.\ Frank Piessens},
   assessor={TODO},
-  assistant={Prof.\,dr.\,ir.\ Dominique Devriese \and Ir.\ Jesper Cockx}}
+  assistant={Dr.\ Dominique Devriese \and Jesper Cockx}}
 % De volgende \setup mag verwijderd worden als geen fiche gewenst is.
 \setup{filingcard,
   translatedtitle={TODO: Programming and Proofs in Dependently Typed Languages},
