--- a/masterproef.tex
+++ b/masterproef.tex
@@ -51,8 +51,9 @@
 %%%%%%%%%%%%%%%%%%%%
 % Chapters
 
-\include{ch1-case-koopatroopas}
-\include{ch2-case-redblacktrees}
+\include{ch-agda-haskell}
+\include{ch-case-koopatroopas}
+\include{ch-case-redblacktrees}
 
 % Chapters
 %%%%%%%%%%%%%%%%%%%%
